chore: rebuild presentation

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>presentation</title>
+    <title>pfwr - Generate HTML Slidedecks from Markdown files</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>/* PrismJS 1.23.0
 https://prismjs.com/download.html#themes=prism-okaidia&languages=markup+css+clike+javascript */
@@ -309,16 +309,16 @@ transform: translate(0, 0);
 }
 }</style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&#x26;family=Roboto+Slab:wght@400;700&#x26;family=Roboto+Mono:wght@400;700&#x26;display=swap">
+    <link rel="canonical" href="https://github.com/nikku/pfwr/">
+    <meta name="description" content="This slide deck introduces pfwr - a little command line utility that generates beautiful, self-contained HTML slide decks from Markdown files.">
+    <meta name="keywords" content="pfwr, static side generator, markdown to html">
+    <meta name="author" content="nikku">
   </head>
   <body>
     <div id="slide-container" class="slide-container">
       <section class="slide" data-align="left">
         <h1><em>pfwr</em></h1>
         <h3>Turns Your Markdown Presentation into a <img class="emoji" draggable="false" alt="🌻" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f33b.svg" title="🌻"/> HTML Slidedeck.</h3>
-      </section>
-      <section class="slide" data-align="left">
-        <h3><em>Disclaimer</em> I built this tool <img class="emoji" draggable="false" alt="😉" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f609.svg" title="😉"/></h3>
-        <p><a href="https://github.com/nikku" target="_blank" rel="nofollow noopener noreferrer"><code>@nikku</code></a> on GitHub</p>
       </section>
       <section class="slide" data-align="left">
         <h3>Write Markdown</h3>
