fix: correct split regression

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -321,6 +321,10 @@ transform: translate(0, 0);
         <h3>Turns Your Markdown Presentation into a <img class="emoji" draggable="false" alt="🌻" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f33b.svg" title="🌻"/> HTML Slidedeck.</h3>
       </section>
       <section class="slide" data-align="left">
+        <h3><em>Disclaimer</em> I built this tool <img class="emoji" draggable="false" alt="😉" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f609.svg" title="😉"/></h3>
+        <p><a href="https://github.com/nikku" target="_blank" rel="nofollow noopener noreferrer"><code>@nikku</code></a> on GitHub</p>
+      </section>
+      <section class="slide" data-align="left">
         <h3>Write Markdown</h3>
         <pre><code class="language-markdown">
 # First Slide
