chore: improve color palette

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -131,16 +131,16 @@ box-sizing: border-box;
 --font-family-heading: 'Roboto Slab', serif;
 --font-family-code: 'Roboto Mono', monospace;
 --list-margin: .5em;
---color-bright: white;
+--color-bright: #FEFEFE;
 --color-light-gray: #F0F0F0;
 --color-darker-gray: #CCC;
 --color-code-bg: #1b1f230d;
 --color-muted: #888;
 --color-default: #333;
 --color-highlight: fuchsia;
---color-highlight-inverse: lightgoldenrodyellow;
---color-link: steelblue;
---color-table-head: lightsteelblue;
+--color-highlight-inverse: #ffc124;
+--color-link: #0076ff;
+--color-table-head: #ff7e00;
 }
 code {
 padding: .2em .4em;
@@ -241,7 +241,7 @@ font-size: .7em;
 }
 thead {
 color: var(--color-bright);
-background: var(--color-muted);
+background: var(--color-table-head);
 }
 tbody tr + tr {
 border-top: solid 1px var(--color-darker-gray);
