--- a/example/presentation.html
+++ b/example/presentation.html
@@ -132,6 +132,7 @@ box-sizing: border-box;
 --font-family-code: 'Roboto Mono', monospace;
 --list-margin: .5em;
 --color-bright: #FEFEFE;
+--color-brighter: #F0F0F0;
 --color-light-gray: #F0F0F0;
 --color-darker-gray: #CCC;
 --color-code-bg: #1b1f230d;
@@ -231,6 +232,9 @@ color: white;
 .slide[data-theme='funky'] em {
 color: var(--color-default);
 background: var(--color-highlight-inverse);
+}
+.slide[data-theme='funky'] .slide-number {
+color: var(--color-brighter);
 }
 table {
 border-radius: 1rem;
