--- a/example/presentation.html
+++ b/example/presentation.html
@@ -322,10 +322,10 @@ transform: translate(0, 0);
     <div id="slide-container" class="slide-container">
       <section class="slide" data-align="left">
         <h1><em>pfwr</em></h1>
-        <h3>Turns Your Markdown Presentation into a <img class="emoji" draggable="false" alt="🌻" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f33b.svg" title="🌻"/> HTML Slidedeck.</h3>
+        <h3>Turns Your Markdown Presentation into a 🌻 HTML Slidedeck.</h3>
       </section>
       <section class="slide" data-align="left">
-        <h3><em>Disclaimer</em> I built this tool <img class="emoji" draggable="false" alt="😉" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f609.svg" title="😉"/></h3>
+        <h3><em>Disclaimer</em> I built this tool 😉</h3>
         <p><a href="https://github.com/nikku" target="_blank" rel="nofollow noopener noreferrer"><code>@nikku</code></a> on GitHub</p>
       </section>
       <section class="slide" data-align="left">
@@ -390,8 +390,8 @@ transform: translate(0, 0);
           </thead>
           <tbody>
             <tr>
-              <td align="left"><img class="emoji" draggable="false" alt="1️⃣" src="https://twemoji.maxcdn.com/v/13.0.1/svg/31-20e3.svg" title="1️⃣"/></td>
-              <td align="center"><img class="emoji" draggable="false" alt="2️⃣" src="https://twemoji.maxcdn.com/v/13.0.1/svg/32-20e3.svg" title="2️⃣"/> <img class="emoji" draggable="false" alt="3️⃣" src="https://twemoji.maxcdn.com/v/13.0.1/svg/33-20e3.svg" title="3️⃣"/></td>
+              <td align="left">1️⃣</td>
+              <td align="center">2️⃣ 3️⃣</td>
               <td align="right"></td>
             </tr>
             <tr>
@@ -426,16 +426,16 @@ theme=funky
 align=right
 -->
         <h1>How is it</h1>
-        <h2>Not <img class="emoji" draggable="false" alt="⬅️" src="https://twemoji.maxcdn.com/v/13.0.1/svg/2b05.svg" title="⬅️"/> aligned?</h2>
+        <h2>Not ⬅️ aligned?</h2>
       </section>
       <section class="slide" data-align="center">
-        <p>And finally, <img class="emoji" draggable="false" alt="🖨️" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f5a8.svg" title="🖨️"/> your slides to PDF.</p>
-        <p>Use your browser's <img class="emoji" draggable="false" alt="🖨️" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f5a8.svg" title="🖨️"/> function.</p>
+        <p>And finally, 🖨️ your slides to PDF.</p>
+        <p>Use your browser's 🖨️ function.</p>
         <p>It actually <em>works</em>.</p>
       </section>
       <section class="slide" data-align="center">
-        <p><img class="emoji" draggable="false" alt="➡️" src="https://twemoji.maxcdn.com/v/13.0.1/svg/27a1.svg" title="➡️"/> <a href="https://github.com/nikku/pfwr" target="_blank" rel="nofollow noopener noreferrer">GitHub</a></p>
-        <p><img class="emoji" draggable="false" alt="📝" src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f4dd.svg" title="📝"/> <a href="https://github.com/nikku/pfwr/blob/main/example/presentation.md" target="_blank" rel="nofollow noopener noreferrer">Presentation Source</a></p>
+        <p>➡️ <a href="https://github.com/nikku/pfwr" target="_blank" rel="nofollow noopener noreferrer">GitHub</a></p>
+        <p>📝 <a href="https://github.com/nikku/pfwr/blob/main/example/presentation.md" target="_blank" rel="nofollow noopener noreferrer">Presentation Source</a></p>
       </section>
     </div>
     <script>function addPage(index, slide) {
@@ -530,7 +530,10 @@ Prism.languages.markup={comment:/<!--[\s\S]*?-->/,prolog:/<\?[\s\S]+?\?>/,doctyp
 !function(s){var e=/("|')(?:\\(?:\r\n|[\s\S])|(?!\1)[^\\\r\n])*\1/;s.languages.css={comment:/\/\*[\s\S]*?\*\//,atrule:{pattern:/@[\w-](?:[^;{\s]|\s+(?![\s{]))*(?:;|(?=\s*\{))/,inside:{rule:/^@[\w-]+/,"selector-function-argument":{pattern:/(\bselector\s*\(\s*(?![\s)]))(?:[^()\s]|\s+(?![\s)])|\((?:[^()]|\([^()]*\))*\))+(?=\s*\))/,lookbehind:!0,alias:"selector"},keyword:{pattern:/(^|[^\w-])(?:and|not|only|or)(?![\w-])/,lookbehind:!0}}},url:{pattern:RegExp("\\burl\\((?:"+e.source+"|(?:[^\\\\\r\n()\"']|\\\\[^])*)\\)","i"),greedy:!0,inside:{function:/^url/i,punctuation:/^\(|\)$/,string:{pattern:RegExp("^"+e.source+"$"),alias:"url"}}},selector:RegExp("[^{}\\s](?:[^{};\"'\\s]|\\s+(?![\\s{])|"+e.source+")*(?=\\s*\\{)"),string:{pattern:e,greedy:!0},property:/(?!\s)[-_a-z\xA0-\uFFFF](?:(?!\s)[-\w\xA0-\uFFFF])*(?=\s*:)/i,important:/!important\b/i,function:/[-a-z0-9]+(?=\()/i,punctuation:/[(){};:,]/},s.languages.css.atrule.inside.rest=s.languages.css;var t=s.languages.markup;t&&(t.tag.addInlined("style","css"),s.languages.insertBefore("inside","attr-value",{"style-attr":{pattern:/(^|["'\s])style\s*=\s*(?:"[^"]*"|'[^']*')/i,lookbehind:!0,inside:{"attr-value":{pattern:/=\s*(?:"[^"]*"|'[^']*'|[^\s'">=]+)/,inside:{style:{pattern:/(["'])[\s\S]+(?=["']$)/,lookbehind:!0,alias:"language-css",inside:s.languages.css},punctuation:[{pattern:/^=/,alias:"attr-equals"},/"|'/]}},"attr-name":/^style/i}}},t.tag))}(Prism);
 Prism.languages.clike={comment:[{pattern:/(^|[^\\])\/\*[\s\S]*?(?:\*\/|$)/,lookbehind:!0,greedy:!0},{pattern:/(^|[^\\:])\/\/.*/,lookbehind:!0,greedy:!0}],string:{pattern:/(["'])(?:\\(?:\r\n|[\s\S])|(?!\1)[^\\\r\n])*\1/,greedy:!0},"class-name":{pattern:/(\b(?:class|interface|extends|implements|trait|instanceof|new)\s+|\bcatch\s+\()[\w.\\]+/i,lookbehind:!0,inside:{punctuation:/[.\\]/}},keyword:/\b(?:if|else|while|do|for|return|in|instanceof|function|new|try|throw|catch|finally|null|break|continue)\b/,boolean:/\b(?:true|false)\b/,function:/\w+(?=\()/,number:/\b0x[\da-f]+\b|(?:\b\d+(?:\.\d*)?|\B\.\d+)(?:e[+-]?\d+)?/i,operator:/[<>]=?|[!=]=?=?|--?|\+\+?|&&?|\|\|?|[?*/~^%]/,punctuation:/[{}[\];(),.:]/};
 Prism.languages.javascript=Prism.languages.extend("clike",{"class-name":[Prism.languages.clike["class-name"],{pattern:/(^|[^$\w\xA0-\uFFFF])(?!\s)[_$A-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*(?=\.(?:prototype|constructor))/,lookbehind:!0}],keyword:[{pattern:/((?:^|})\s*)(?:catch|finally)\b/,lookbehind:!0},{pattern:/(^|[^.]|\.\.\.\s*)\b(?:as|async(?=\s*(?:function\b|\(|[$\w\xA0-\uFFFF]|$))|await|break|case|class|const|continue|debugger|default|delete|do|else|enum|export|extends|for|from|function|(?:get|set)(?=\s*[\[$\w\xA0-\uFFFF])|if|implements|import|in|instanceof|interface|let|new|null|of|package|private|protected|public|return|static|super|switch|this|throw|try|typeof|undefined|var|void|while|with|yield)\b/,lookbehind:!0}],function:/#?(?!\s)[_$a-zA-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*(?=\s*(?:\.\s*(?:apply|bind|call)\s*)?\()/,number:/\b(?:(?:0[xX](?:[\dA-Fa-f](?:_[\dA-Fa-f])?)+|0[bB](?:[01](?:_[01])?)+|0[oO](?:[0-7](?:_[0-7])?)+)n?|(?:\d(?:_\d)?)+n|NaN|Infinity)\b|(?:\b(?:\d(?:_\d)?)+\.?(?:\d(?:_\d)?)*|\B\.(?:\d(?:_\d)?)+)(?:[Ee][+-]?(?:\d(?:_\d)?)+)?/,operator:/--|\+\+|\*\*=?|=>|&&=?|\|\|=?|[!=]==|<<=?|>>>?=?|[-+*/%&|^!=<>]=?|\.{3}|\?\?=?|\?\.?|[~:]/}),Prism.languages.javascript["class-name"][0].pattern=/(\b(?:class|interface|extends|implements|instanceof|new)\s+)[\w.\\]+/,Prism.languages.insertBefore("javascript","keyword",{regex:{pattern:/((?:^|[^$\w\xA0-\uFFFF."'\])\s]|\b(?:return|yield))\s*)\/(?:\[(?:[^\]\\\r\n]|\\.)*]|\\.|[^/\\\[\r\n])+\/[gimyus]{0,6}(?=(?:\s|\/\*(?:[^*]|\*(?!\/))*\*\/)*(?:$|[\r\n,.;:})\]]|\/\/))/,lookbehind:!0,greedy:!0,inside:{"regex-source":{pattern:/^(\/)[\s\S]+(?=\/[a-z]*$)/,lookbehind:!0,alias:"language-regex",inside:Prism.languages.regex},"regex-flags":/[a-z]+$/,"regex-delimiter":/^\/|\/$/}},"function-variable":{pattern:/#?(?!\s)[_$a-zA-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*(?=\s*[=:]\s*(?:async\s*)?(?:\bfunction\b|(?:\((?:[^()]|\([^()]*\))*\)|(?!\s)[_$a-zA-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*)\s*=>))/,alias:"function"},parameter:[{pattern:/(function(?:\s+(?!\s)[_$a-zA-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*)?\s*\(\s*)(?!\s)(?:[^()\s]|\s+(?![\s)])|\([^()]*\))+(?=\s*\))/,lookbehind:!0,inside:Prism.languages.javascript},{pattern:/(?!\s)[_$a-zA-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*(?=\s*=>)/i,inside:Prism.languages.javascript},{pattern:/(\(\s*)(?!\s)(?:[^()\s]|\s+(?![\s)])|\([^()]*\))+(?=\s*\)\s*=>)/,lookbehind:!0,inside:Prism.languages.javascript},{pattern:/((?:\b|\s|^)(?!(?:as|async|await|break|case|catch|class|const|continue|debugger|default|delete|do|else|enum|export|extends|finally|for|from|function|get|if|implements|import|in|instanceof|interface|let|new|null|of|package|private|protected|public|return|set|static|super|switch|this|throw|try|typeof|undefined|var|void|while|with|yield)(?![$\w\xA0-\uFFFF]))(?:(?!\s)[_$a-zA-Z\xA0-\uFFFF](?:(?!\s)[$\w\xA0-\uFFFF])*\s*)\(\s*|\]\s*\(\s*)(?!\s)(?:[^()\s]|\s+(?![\s)])|\([^()]*\))+(?=\s*\)\s*\{)/,lookbehind:!0,inside:Prism.languages.javascript}],constant:/\b[A-Z](?:[A-Z_]|\dx?)*\b/}),Prism.languages.insertBefore("javascript","string",{"template-string":{pattern:/`(?:\\[\s\S]|\${(?:[^{}]|{(?:[^{}]|{[^}]*})*})+}|(?!\${)[^\\`])*`/,greedy:!0,inside:{"template-punctuation":{pattern:/^`|`$/,alias:"string"},interpolation:{pattern:/((?:^|[^\\])(?:\\{2})*)\${(?:[^{}]|{(?:[^{}]|{[^}]*})*})+}/,lookbehind:!0,inside:{"interpolation-punctuation":{pattern:/^\${|}$/,alias:"punctuation"},rest:Prism.languages.javascript}},string:/[\s\S]+/}}}),Prism.languages.markup&&Prism.languages.markup.tag.addInlined("script","javascript"),Prism.languages.js=Prism.languages.javascript;</script>
-    <script>function setSlide(slide) {
+    <script>function onLoaded(fn) {
+window.addEventListener('DOMContentLoaded', fn);
+}
+function setSlide(slide) {
 window.location.hash = '#' + (slide + 1);
 }
 function getSlide() {
@@ -538,12 +541,22 @@ const hash = window.location.hash;
 const slideHash = hash && hash.substring(1);
 return (slideHash && parseInt(slideHash, 10) || 1) - 1;
 }
+onLoaded(() => {
+const container = document.querySelector('#slide-container');
+// proper emojis
+twemoji.parse(container, {
+folder: 'svg',
+ext: '.svg'
+});
+// bootstrap presentation
 const presentation = pfwr({
-container: document.querySelector('#slide-container')
+container
 });
 presentation.goto(getSlide());
 presentation.on('slideChanged', function(event) {
 setSlide(event.slideIndex);
+});
 });</script>
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js"></script>
   </body>
 </html>
