chore: update presentation

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>pfwr - Generate HTML Slidedecks from Markdown files</title>
+    <title>pfwr - Generate HTML Slide Decks from Markdown Files</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>/* PrismJS 1.23.0
 https://prismjs.com/download.html#themes=prism-okaidia&languages=markup+css+clike+javascript */
@@ -322,7 +322,7 @@ transform: translate(0, 0);
     <div id="slide-container" class="slide-container">
       <section class="slide" data-align="left">
         <h1><em>pfwr</em></h1>
-        <h3>Turns Your Markdown Presentation into a 🌻 HTML Slidedeck.</h3>
+        <h3>Turns Your Markdown 📝 into a ✨ HTML Slide Deck.</h3>
       </section>
       <section class="slide" data-align="left">
         <h3><em>Disclaimer</em> I built this tool 😉</h3>
