--- a/example/presentation.html
+++ b/example/presentation.html
@@ -143,7 +143,7 @@ box-sizing: border-box;
 --color-link: #0076ff;
 --color-table-head: #ff7e00;
 }
-code {
+code:not([class*="language-"]) {
 padding: .2em .4em;
 margin: 0;
 font-size: 85%;
