fix: correct center-aligned slide paragraph alignment

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -214,6 +214,7 @@ align-items: flex-start;
 }
 .slide[data-align='center'] {
 align-items: center;
+text-align: center;
 }
 .slide[data-align='left'] {
 align-items: flex-start;
