chore: minor additional color fixes

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -145,59 +145,55 @@ box-sizing: border-box;
 --color-purple: #B10DC9;
 --color-maroon: #85144B;
 --color-white: #FFFFFF;
---color-silver: #DDDDDD;
---color-gray: #AAAAAA;
+--color-gray-7: #FCFCFC;
+--color-gray-6: #F0F0F0;
+--color-gray-5: #DDDDDD;
+--color-gray-4: #AAAAAA;
+--color-gray-3: #888;
+--color-gray-2: #666;
+--color-gray-1: #333;
 --color-black: #111;
---color-black-1: var(--color-black);
---color-black-2: #333;
---color-gray-0: var(--color-gray);
---color-gray-1: var(--color-silver);
---color-gray-2: #888;
---color-gray-3: #F0F0F0;
---color-white-0: var(--color-white);
---color-white-1: #FEFEFE;
---color-white-2: #FAFAFA;
---color-default: var(--color-black-1);
---color-bg: var(--color-white-0);
---color-highlight: var(--color-white-1);
+--color-default: var(--color-gray-1);
+--color-bg: var(--color-white);
+--color-highlight: var(--color-gray-7);
 --color-highlight-bg: var(--color-fuchsia);
---color-slide-number: var(--color-gray-2);
+--color-slide-number: var(--color-gray-3);
 --color-code-bg: #cfcaca59;
---color-code: var(--color-white-1);
+--color-code: var(--color-gray-7);
 --color-link: var(--color-blue);
---color-table-head: var(--color-white-1);
+--color-table-head: var(--color-gray-7);
 --color-table-head-bg: var(--color-orange);
 --color-table: var(--color-default);
---color-table-bg: var(--color-white-1);
---color-table-border: var(--color-gray-2);
+--color-table-bg: var(--color-gray-6);
+--color-table-border: var(--color-gray-5);
 }
 .slide[data-theme='funky'] {
---color-default: var(--color-white-1);
+--color-default: var(--color-gray-7);
 --color-bg: var(--color-fuchsia);
---color-slide-number: var(--color-gray-1);
---color-code: var(--color-white-1);
+--color-slide-number: var(--color-gray-5);
+--color-code: var(--color-gray-7);
 --color-code-bg: #cfcaca59;
---color-highlight: var(--color-white-1);
+--color-highlight: var(--color-gray-7);
 --color-highlight-bg: var(--color-orange);
---color-link: var(--color-white-1);
---color-table-head: var(--color-black-2);
+--color-link: var(--color-gray-7);
+--color-table-head: var(--color-gray-1);
 --color-table-head-bg: var(--color-yellow);
---color-table-bg: var(--color-white-1);
---color-table-border: var(--color-gray-2);
+--color-table-bg: var(--color-gray-7);
+--color-table-border: var(--color-gray-4);
 }
 .slide[data-theme='eco'] {
---color-default: var(--color-white-1);
+--color-default: var(--color-gray-7);
 --color-bg: var(--color-olive);
---color-slide-number: var(--color-gray-1);
---color-code: var(--color-white-1);
+--color-slide-number: var(--color-gray-5);
+--color-code: var(--color-gray-7);
 --color-code-bg: #cfcaca59;
---color-highlight: var(--color-gray-3);
+--color-highlight: var(--color-gray-6);
 --color-highlight-bg: var(--color-red);
---color-link: var(--color-white-1);
---color-table-head: var(--color-white-1);
+--color-link: var(--color-gray-7);
+--color-table-head: var(--color-gray-7);
 --color-table-head-bg: var(--color-orange);
---color-table-bg: var(--color-white-1);
---color-table-border: var(--color-gray-2);
+--color-table-bg: var(--color-gray-7);
+--color-table-border: var(--color-gray-4);
 }
 code:not([class*="language-"]) {
 padding: .2em .4em;
