chore(example): rebuild

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -384,6 +384,18 @@ transform: translate(0, 0);
     <meta name="description" content="This slide deck introduces pfwr - a little command line utility that generates beautiful, self-contained HTML slide decks from Markdown files.">
     <meta name="keywords" content="pfwr, static side generator, markdown to html">
     <meta name="author" content="nikku">
+    <meta name="copyright" content="© 2021 nikku">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://github.com/nikku/pfwr/">
+    <meta property="og:title" content="pfwr - Generate HTML Slide Decks from Markdown Files">
+    <meta property="og:description" content="This slide deck introduces pfwr - a little command line utility that generates beautiful, self-contained HTML slide decks from Markdown files.">
+    <meta property="og:image" content="https://cdn.statically.io/gh/nikku/pfwr/main/docs/screenshot.png">
+    <meta property="article:tag" content="pfwr">
+    <meta property="article:tag" content="static side generator">
+    <meta property="article:tag" content="markdown to html">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://cdn.statically.io/gh/nikku/pfwr/main/docs/screenshot.png">
+    <meta name="twitter:creator" content="@nrehwaldt">
   </head>
   <body>
     <div id="slide-container" class="slide-container">
