--- a/example/presentation.html
+++ b/example/presentation.html
@@ -481,7 +481,7 @@ img {
     <meta name="description" content="This slide deck introduces pfwr - a little command line utility that generates beautiful, self-contained HTML slide decks from Markdown files.">
     <meta name="keywords" content="pfwr, static side generator, markdown to html">
     <meta name="author" content="nikku">
-    <meta name="copyright" content="© 2022 nikku">
+    <meta name="copyright" content="© 2023 nikku">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://github.com/nikku/pfwr/">
     <meta property="og:title" content="pfwr - Generate HTML Slide Decks from Markdown Files">
@@ -941,9 +941,10 @@ onLoaded(() => {
 
   // proper emojis
 
-  twemoji.parse(container, {
+  typeof twemoji !== 'undefined' && twemoji.parse(container, {
     folder: 'svg',
-    ext: '.svg'
+    ext: '.svg',
+    base: 'https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/'
   });
 
   // bootstrap presentation
@@ -963,6 +964,6 @@ onLoaded(() => {
   });
 
 });</script>
-    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js"></script>
+    <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js"></script>
   </body>
 </html>
