--- a/example/presentation.html
+++ b/example/presentation.html
@@ -842,7 +842,9 @@ function pfwr(options) {
 
   function goto(next) {
 
-    const nextIndex = ((next, currentIndex, slides) => {
+    const slide = slides[slideIndex] || slides.find(s => s.dataset.name === slideIndex);
+
+    const nextIndex = ((next, currentIndex, numberOfSlides) => {
 
       if (next === 'next') {
         return currentIndex + 1;
@@ -857,23 +859,21 @@ function pfwr(options) {
       }
 
       if (next === 'last') {
-        return slides - 1;
+        return numberOfSlides - 1;
       }
 
       if (next < 0) {
-        return slides + next;
+        return numberOfSlides + next;
       }
 
       return next;
-    })(next, slideIndex, slides.length);
+    })(next, slides.indexOf(slide), slides.length);
 
     if (slideIndex === nextIndex) {
       return;
     }
 
-    const slide = slides[slideIndex];
-
-    const nextSlide = slides[nextIndex];
+    const nextSlide = slides[nextIndex] || slides.find(s => s.dataset.name === nextIndex);
 
     if (!nextSlide) {
       return;
@@ -979,7 +979,7 @@ function onHashChange(fn) {
 }
 
 function setSlide(slide) {
-  window.location.hash = '#' + (slide + 1);
+  window.location.hash = '#' + (typeof slide === 'number' ? slide + 1 : slide);
 }
 
 function getSlide() {
@@ -987,7 +987,17 @@ function getSlide() {
 
   const slideHash = hash && hash.substring(1);
 
-  return (slideHash && parseInt(slideHash, 10) || 1) - 1;
+  if (!slideHash) {
+    return 0;
+  }
+
+  const slideNumber = parseInt(slideHash, 10);
+
+  if (slideNumber > 0) {
+    return slideNumber - 1;
+  }
+
+  return slideHash;
 }
 
 onLoaded(() => {
