fix: style `small` tag

--- a/example/presentation.html
+++ b/example/presentation.html
@@ -147,6 +147,7 @@ body {
   --font-size-h4: 1.1em;
   --font-size-default: 3.5em;
   --font-size-small: .4em;
+  --font-size-smaller: .7em;
 
   --font-size-default-print: 2.5em;
 
@@ -281,6 +282,10 @@ li + li {
 
 a {
   color: var(--color-link);
+}
+
+small {
+  font-size: var(--font-size-smaller);
 }
 
 em {
